--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,14 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".CalculatorActivity" />
+        <activity android:name=".ListActivity" />
+        <activity android:name=".WeatherActivity" />
     </application>
 
 </manifest>
