--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,20 +15,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TopacAdemy_android"
         tools:targetApi="31">
+
         <activity
-            android:name=".presentation.main.MainActivity"
+            android:name=".presentation.root.RootActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".presentation.home.HomeActivity" />
-        <activity android:name=".presentation.calculator.CalculatorActivity" />
-        <activity android:name=".presentation.list.ListActivity" />
-        <activity android:name=".presentation.weather.WeatherActivity" />
-        <activity android:name=".presentation.car.CarListActivity" />
     </application>
-
 </manifest>
